# somni-quiz

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
data/: questionnaire_business9.json  streamlit_dynamic_questionnaire.json
docs/: 09-grpc-api.md
docs/architecture/: 000-overview.md  010-state-model.md  020-node-graph.md  030-prompt-layout.md  040-test-layout.md
docs/decisions/: 0001-single-response-node.md  0002-question-catalog-vs-session-memory.md  0003-content-branch-2-plus-1.md
docs/deploy/: server_deploy.md
docs/superpowers/: regression-docx-coverage.md
docs/superpowers/plans/: 2026-04-05-docx-9q-regression.md  2026-04-05-non-content-closure.md  2026-04-17-companion-mode.md
docs/superpowers/specs/: 2026-04-17-companion-mode-design.md
prompts/layer1/: companion_decision.md  turn_classify.md
prompts/layer2/: content_understand.md  final_attribution.md  non_content_detect.md  non_content_intent.md  text_option_mapping.md
prompts/layer3/: companion_response.md  response_composer.md
prompts/shared/: glossary.md  language_policy.md  output_contracts.md  persona_contract.md  response_guardrails.md
proto/: somni_quiz.proto
scripts/: check_real_llm.py  deploy_server.py
src/somni_graph_quiz/: __init__.py
src/somni_graph_quiz/app/: bootstrap.py  env_config.py  real_llm_check.py  settings.py  streamlit_app.py
src/somni_quiz_ai/: __init__.py
tests/: __init__.py  conftest.py
tests/regression/: __init__.py  test_grpc_regression.py  test_runtime_regression.py  test_streamlit_regression.py
tests/unit/llm/: test_client.py  (+2 more)
(+147 files in other folders)
